# smart_remote

./: CMakeLists.txt  Kconfig  README.md
common/: app_bt_hid.c  app_bt_hid.h  app_bt_mouse.c  app_bt_mouse.h  app_esb.c  app_timeslot.c  dvi_adpcm.c
common/circle_test/: circle_cord_size250.h  circle_test.c  circle_test.h
configuration/common/: motion_sensor.h
configuration/nrf52833dk_nrf52833/: prj.conf
configuration/thingy52_nrf52832/: app.overlay  buttons_def.h  click_detector_def.h  hid_keymap_def.h  prj.conf  prj_backup.conf
dongle/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
dongle/src/: drv_flash.c  drv_flash.h  esb_handle.c  esb_handle.h  main.c  usb_audio.c  usb_audio.h  usb_audio_app.c  usb_audio_app.h
smart_remote/: CMakeLists.txt  Kconfig  prj.conf  thingy52_nrf52832.overlay
smart_remote/src/: main.c  sound_service.c  sound_service.h
smart_remote/src/drivers/: drv_mic.c  drv_mic.h
smart_remote/src/events/: mic_work_event.c  mic_work_event.h
smart_remote/src/modules/: app_bt_hid.c  app_esb.c  app_esb.h  app_timeslot.c  app_timeslot.h
src/events/: CMakeLists.txt
src/hw_interface/: CMakeLists.txt  Kconfig.motion  buttons_sim.c  motion_sensor.c
src/modules/: CMakeLists.txt  Kconfig  Kconfig.audio_service  audio_service.c  led_stream.c
src/smart_remote/: CMakeLists.txt  Kconfig  app_esb.c  app_timeslot.c  app_timeslot.h  drv_mic.c  drv_mic.h  dvi_adpcm.c  dvi_adpcm.h
src/util/: CMakeLists.txt  Kconfig
